src/pages/home/home.scss
page-home {
  ion-content {

    &.content-ios,
    &.content-md {
      background: $feather;
    }

    .scroll-content {
      padding-bottom: 100px;
    }
  }

  .toolbar-background {
    background: none;
  }

  .home-header {
    margin-top: 12px;

    .notifications-badge {
      border-radius: 9px;
      font-size: 15px;
      padding: 3px 7px;
      padding-top: 4px;
      font-weight: 600;
      margin-right: 5px;
    }

    .add-button {
      margin-left: 1rem;

      ion-icon {
        font-size: 3rem;
      }
    }

    .settings-button {
      margin-right: 1rem;

      img {
        opacity: 0.6;
      }
    }

    .home-logo {
      height: 24px;
      position: relative;
      top: 3px;
    }

    button.copay {
      img {
        filter: grayscale(100%);
      }
    }
  }

  .toolbar-title-ios {
    text-align: center;
  }

  .wallets-list {
    margin-top: 12px;
  }

  .title {
    font-weight: 500;

    >img {
      margin-right: 7px;
    }
  }

  .error {
    color: color($colors, danger);
  }

  page-wallet-activity,
  page-txp {
    @media (max-width: 350px) {
      .item-title {
        font-size: 13px;
      }

      ion-note .date {
        font-size: 11.5px;
      }
    }
  }

  page-txp:first-child,
  page-wallet-activity:first-child {
    & .item-ios {
      border-top: 0.55px solid #f4f4f4;
    }
  }

  page-txp:last-child,
  page-wallet-activity:last-child {
    border: 0;

    & .item-inner {
      border: 0 !important;
    }
  }

  .card {
    z-index: 1;
    position: relative;
  }

  .clipboard-card {
    z-index: 0;
  }

  .initial-margin {
    margin-top: -140px;
  }

  .content-animation {
    z-index: 5;
    margin-top: 0px;
    -webkit-transition: margin-top 0.7s cubic-bezier(1, 0, 0.93, 0.19) 0.2s;
    -moz-transition: margin-top 0.7s cubic-bezier(1, 0, 0.93, 0.19) 0.2s;
    -o-transition: margin-top 0.7s cubic-bezier(1, 0, 0.93, 0.19) 0.2s;
    transition: margin-top 0.7s cubic-bezier(1, 0, 0.93, 0.19) 0.2s;
    animation-name: bounce-card;
    animation-duration: 0.7s;
    animation-delay: 0.8s;
  }

  ion-refresher {
    height: 120px;

    &-content {
      margin-top: -25px;
    }
  }

  .server-message {
    padding-bottom: 0px;

    &-header {
      padding: 0px;
      text-align: center;

      .row {
        justify-content: flex-end;

        button {
          font-size: 12px;
        }
      }
    }

    &-content {
      padding: 2rem 0rem 0rem 0rem;
    }

    &-icon {
      display: flex;
      justify-content: center;

      img {
        width: 4rem;
        height: 4rem;
      }
    }

    &-title {
      text-align: center;
      font-size: 1.8rem;
      font-weight: bold;
      margin-top: 1rem;
      padding-left: 1.5rem;
      padding-right: 1.5rem;
    }

    .title {
      color: color($colors, grey);
      font-weight: 500;
      font-size: 2rem;

      &-info {
        color: color($colors, info);
      }

      &-critical {
        color: color($colors, warning);
      }
    }

    &-body {
      color: color($colors, grey);
      text-align: center;
      white-space: normal;
      margin-bottom: 1rem;
      font-size: 1.6rem;
      padding: 1rem 2rem 1rem 2rem;
    }

    &-button {
      cursor: pointer;
      font-size: 16px;
      display: flex;
      justify-content: center;
      align-items: center;
      background-color: color($colors, light);
      color: color($colors, dark);
      height: 5rem;
    }
  }

  .no-header {
    margin-top: 2.6rem;
  }

  .section-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    color: black;
    font-size: 16px;
    font-weight: 500;
    margin-bottom: 10px;
    margin-top: 20px;
  }

  // Styles for gift cards and Bitpay cards
  .sliding-container {
    border-radius: 5px;
    display: block;
  }

  .wallets ion-item-sliding.item-wrapper {
    button.item.item-block .item-inner {
      align-items: start;
    }
  }

  ion-item-sliding.item-wrapper {
    $gift-card-item-side-padding: 4%;
    $gift-card-item-height: 59px;

    background: none;
    padding-left: $gift-card-item-side-padding;
    padding-right: $gift-card-item-side-padding;
    padding-bottom: 1rem;

    ion-item-options {
      border-bottom: 0;
      margin-top: 1px;
      height: $gift-card-item-height + 14px;

      &[side*='right'] {
        padding-right: $gift-card-item-side-padding;
      }

      &[side*='left'] {
        padding-left: $gift-card-item-side-padding;
      }

      button.button {
        border-radius: 5px;
        font-weight: 400;
        min-width: 73px;
        padding: 15px;

        .archive {
          &__icon {
            font-size: 20px;
            margin-top: -1px;
          }

          &__text {
            font-size: 13px;
          }
        }
      }
    }

    button.item.item-block {
      font-size: 16px;
      border-radius: 5px;
      box-shadow: 0 5px 18px 0 rgba(0, 0, 0, 0.03);

      .item-inner {
        border: 0;
        height: $gift-card-item-height;

        ion-label {

          &.label-ios,
          &.label-md {
            display: flex;
            height: $gift-card-item-height;
            align-items: center;
            margin: 0;
          }
        }
      }
    }
  }

  .bitpay-card {
    .card-item {
      button {
        background: linear-gradient(45deg, #202036 -25%, #1a3b8b);

        .item-inner .input-wrapper {
          padding-left: 5px;
          margin-right: 5px;
          min-width: 7.5rem;
        }

        ion-label img {
          width: 7.5rem;
        }

        ion-note {
          text-align: right;
          color: white;
          line-height: 22px;

          .funds {
            font-size: 16px;
          }

          .number {
            opacity: 0.5;
            font-size: 14px;
          }
        }
      }
    }
  }

  .add-card-button {
    @include center;
    background: #f4f5fb;
    color: #5f7bf7;
    border-radius: 7px;
    cursor: pointer;
    font-size: 18px;
    font-weight: 500;
    text-align: center;
    width: 92%;
    margin: 15px auto;
    margin-top: 0;
    height: 73px;
  }

  .scan-button {
    position: absolute;
    z-index: 999;
    bottom: 20px;
    left: 50%;
    transform: translateX(-50%);
    padding: 27px 22px 26px 19px;
    border-radius: 30px;
    box-shadow: 0 7px 31px 0 rgba(0, 0, 0, 0.17);
    color: white;
    font-weight: 500;

    ion-avatar {
      margin-top: -3px;
      margin-right: 10px;
    }
  }

  ion-fab {
    ion-icon.icon {
      font-size: 0;
    }

    width: 100px;
    border-radius: 30px;

    button {
      padding: 0px 50px 0px 55px;
      border-radius: 30px;

      .fab-text {
        margin-left: 5px;
        font-weight: 500;
        font-size: 16px;
      }
    }
  }

  @media only screen and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) {
    ion-fab[right] {
      right: env(safe-area-inset-bottom);
    }

    ion-fab[bottom] {
      bottom: env(safe-area-inset-bottom);
    }
  }

  @keyframes bounce-card {
    0% {
      transform: translateY(0);
    }

    10% {
      transform: translateY(0);
    }

    30% {
      transform: translateY(40px);
    }

    50% {
      transform: translateY(0);
    }

    57% {
      transform: translateY(5px);
    }

    64% {
      transform: translateY(0);
    }

    100% {
      transform: translateY(0);
    }
  }

  .sliding-container {
    height: auto;

    button.item {
      &.activated {
        background-color: $feather;
      }
    }

    .primary-text {
      color: black;
      font-size: 16px;

      &:not(:last-child) {
        margin-bottom: 4px;
      }
    }

    .wallet-name {
      margin-bottom: 2px;
    }

    .secondary-text {
      color: #aaaeb6;
      font-size: 14px;
      // margin-bottom: -8px;
    }

    .testnet {
      filter: grayscale(100%);
    }

    .item-inner {
      text-align: right;
      margin: 8px 0px 8px 0;
    }

    .action {
      &.button.button-default {
        padding: 0;
      }

      &--receive {
        background-color: #edf7f9;

        &.activated,
        &:hover:not(.disable-hover) {
          background-color: #e8f4f7;
        }
      }

      &--send {
        background-color: #eff1fe;

        &.activated,
        &:hover:not(.disable-hover) {
          background-color: #e9ebf9;
        }
      }

      &__icon {
        img {
          height: 35px;
        }
      }

      &__text {
        color: #434d59;
        font-size: 14px;
        font-weight: 500;
        margin-top: 3px;
      }
    }

    label-tip {
      margin-top: 12px;
      width: calc(92% - 10px);
      left: calc(4% + 5px);
    }

    ion-item-sliding.item-wrapper {
      &:last-child {
        height: 93px;
      }
    }

    &.wallets {
      button.item.item-block {
        div.item-inner {
          display: flex;
          align-items: center;
        }
      }
    }
  }


}

